--- a/docs/report.tex
+++ b/docs/report.tex
@@ -22,7 +22,10 @@ Background...
 ...
 
 \section{Challenges}
-...
+1. Oriented Bounding Box \\
+The dataset consisted of Oriented Bounding Boxes (Bounding Boxes which are not axis aligned). \\
+All the known formats however supports axis aligned Bounding Boxes only, called Horizontal Bounding Boxes. 
+Therefore, I had to wrap each OBB in HBB.
 
 \section{State Of The Art Computer Vision Networks}
 ...
