--- a/docs/report.tex
+++ b/docs/report.tex
@@ -26,6 +26,9 @@ Background...
 The dataset consisted of Oriented Bounding Boxes (Bounding Boxes which are not axis aligned). \\
 All the known formats however supports axis aligned Bounding Boxes only, called Horizontal Bounding Boxes. 
 Therefore, I had to wrap each OBB in HBB.
+\\\\
+2. Class with a point instead of Bounding Box
+The solar panel is marked with a point instead of 4 points Bounding Box. Therefore, I've decided to just create a 4 point Bounding Box for it containing the same point multiplied by 4.
 
 \section{State Of The Art Computer Vision Networks}
 ...
