Added more graphs to docs

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -28,6 +28,11 @@ Regarding labels, the dataset definitely biases towards small vehicles, which ap
 \label{fig:Dataset Coarse Grained Labels Distribution}
 \end{figure}
 
+As mentioned before, large and small vehicles are further tagged with fine-grained labels.
+charts...
+charts...
+
+On average, there are 8 objects in an image, while the most crowded image contains 164 objects altogether.
 
 
 \section{Challenges}
@@ -51,6 +56,9 @@ Some image annotations contained bounding boxes with coordiantes outside of the 
 6. Small objects\\
 The objects appeared in the images are much smaller than standard images networks handle. Therefore, the Region Proposal Network missed all the objects.
 \section{State Of The Art Computer Vision Networks}
+...
+
+\section{Experiments Results}
 ...
 
 \end{document}
