Added object sizes dist to report as well as charts

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -52,9 +52,18 @@ And also with color tags, as seen in Figure 4.
 \caption{Dataset Color Labels Distribution}
 \label{fig:Dataset Color Labels Distribution}
 \end{figure}
+\\
+On average, there are 8 objects in an image, while the most crowded image contains 164 objects altogether.\\
 
-On average, there are 8 objects in an image, while the most crowded image contains 164 objects altogether.
+<Complete chart regarding objects frequency per image, make bins and then calculate frequencies>\\
 
+In Figure 5 we can see just how small are our objects, and what is their frequency in terms of square rooted area. The large vehicle objects spans roughly on all the size range, with more appearances around sizes 40-100. Small vehicle objects, however, mostly appear in sizes 20-70. Lastly, our solar panel objects are relatively very small, ranging around sizes 10-40.
+\begin{figure}[!h]
+\centering
+\includegraphics[width=0.7\linewidth]{"charts/Dataset Objects Size Distribution"}
+\caption{Dataset Objects Size Distribution}
+\label{fig:Dataset Objects Size Distribution}
+\end{figure}
 
 \section{Challenges}
 1. Oriented Bounding Box \\
